--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "react": "^16.1.1",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.1.1",
     "react-helmet": "^5.2.0",
-    "react-scripts": "1.0.17",
-    "reactstrap": "^5.0.0-alpha.4"
+    "react-scripts": "1.0.17"
   },
   "main": "src/electron-starter.js",
   "scripts": {
@@ -18,6 +18,7 @@
     "electron": "electron ."
   },
   "devDependencies": {
-    "electron": "^1.7.9"
+    "electron": "^1.7.9",
+    "react-toggle": "^4.0.2"
   }
 }
