FIX layout grid and other things

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "bootstrap": "^3.3.7",
     "electron": "^1.7.9",
-    "react-toggle": "^4.0.2"
+    "react-toggle": "^4.0.2",
+    "shelljs.exec": "^1.1.7"
   }
 }
